# docs/swagger.yaml
@@ -1,4 +1,42 @@
 basePath: /api/v1
+definitions:
+  controller.BaseAndCodeAreEqual:
+    properties:
+      message:
+        type: string
+    type: object
+  controller.InvalidUUIDError:
+    type: object
+  controller.UnavailableCurrencyError:
+    properties:
+      currencyList:
+        type: string
+    type: object
+  currencyrates.NoUUIDFoundError:
+    properties:
+      message:
+        type: string
+    type: object
+  models.CurrencyRate:
+    properties:
+      base:
+        type: string
+      currency:
+        type: string
+      updated_at:
+        type: string
+      value:
+        type: number
+    type: object
+  models.CurrencyUpdateUUID:
+    properties:
+      base:
+        type: string
+      currency:
+        type: string
+      uuid:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -7,8 +45,99 @@ info:
   contact:
     email: valentinakuzmenkova@gmail.com
     name: Valentina Kuzmenkova
-  description: This is a sample server celler server.
-  title: Swagger Currency Rate API
+  description: This is a currency rates service.
+  title: Swagger Currency Rates API
   version: "1.0"
-paths: {}
+paths:
+  /rates:
+    get:
+      description: Gets rate by UUID
+      parameters:
+      - description: uuid of update
+        format: string
+        in: query
+        name: uuid
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CurrencyRate'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/currencyrates.NoUUIDFoundError'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Gets rate by UUID
+      tags:
+      - rate
+  /rates/{code}:
+    get:
+      description: Gets rate from the last update
+      parameters:
+      - description: currency base, f.e. EUR
+        format: string
+        in: path
+        name: code
+        type: string
+      - description: currency base, default=USD
+        format: string
+        in: query
+        name: base
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CurrencyRate'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.BaseAndCodeAreEqual'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.BaseAndCodeAreEqual'
+      summary: Gets rate from the last update
+      tags:
+      - rate
+  /rates/{code}/update:
+    get:
+      description: Initiates updating rate
+      parameters:
+      - description: currency base, f.e. EUR
+        format: string
+        in: path
+        name: code
+        type: string
+      - description: currency base, default=USD
+        format: string
+        in: query
+        name: base
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CurrencyUpdateUUID'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.BaseAndCodeAreEqual'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.BaseAndCodeAreEqual'
+      summary: Initiates updating rate
+      tags:
+      - rate
 swagger: "2.0"
