# internal/controller/controller.go
@@ -64,7 +64,18 @@ func ExtractCode(req *http.Request) (string, error) {
 
 }
 
-// Ручка обновления  ставки
+// UpdateRate godoc
+// @Summary      Initiates updating rate
+// @Description  Initiates updating rate
+// @Tags         rate
+// @Produce      json
+// @Param	     code    path     string  USD  "currency base, f.e. EUR"  Format(string)
+// @Param	     base    query     string  USD  "currency base, default=USD"  Format(string)
+// @Success      200  {object} models.CurrencyUpdateUUID
+// @Failure      400  {object} UnavailableCurrencyError
+// @Failure      400  {object} BaseAndCodeAreEqual
+// @Failure      500  {object} BaseAndCodeAreEqual
+// @Router       /rates/{code}/update [get]
 func (c *Controller) UpdateRate(resp http.ResponseWriter, req *http.Request) {
 	ctx := req.Context()
 
@@ -102,11 +113,26 @@ func (c *Controller) UpdateRate(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	resp.Write(result)
+	_, err = resp.Write(result)
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
+	}
 }
 
-// Ручка получения ставки
-func (c *Controller) GetRate(resp http.ResponseWriter, req *http.Request) {
+// GetLastRate godoc
+// @Summary      Gets rate from the last update
+// @Description  Gets rate from the last update
+// @Tags         rate
+// @Produce      json
+// @Param	     code    path     string  USD  "currency base, f.e. EUR"  Format(string)
+// @Param	     base    query     string  USD  "currency base, default=USD"  Format(string)
+// @Success      200  {object} models.CurrencyRate
+// @Failure      400  {object} UnavailableCurrencyError
+// @Failure      400  {object} BaseAndCodeAreEqual
+// @Failure      500  {object} BaseAndCodeAreEqual
+// @Router       /rates/{code} [get]
+func (c *Controller) GetLastRate(resp http.ResponseWriter, req *http.Request) {
 	ctx := req.Context()
 
 	base := ExtractBase(req, c.service.CurrencyList.Base)
@@ -125,40 +151,12 @@ func (c *Controller) GetRate(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	UUID, err := ExtractUUID(req)
-	if err != nil {
-		http.Error(resp, InvalidUUIDError{}.Error(), http.StatusBadRequest)
-		return
-	}
-
 	var cr models.CurrencyRate
 
-	if UUID == uuid.Nil {
-		// Если uuid не указан
-		cr, err = c.service.GetLastRate(ctx, base, code)
-		if err != nil {
-			http.Error(resp, err.Error(), http.StatusInternalServerError)
-			return
-		}
-	} else {
-		// Если запрос еще обновляется
-		_, err := c.service.KV.Get(ctx, fmt.Sprintf("%s_%s", code, base)).Result()
-		if err == nil {
-			http.Error(resp, fmt.Sprintf("Update request with uuid=%s is in process", UUID.String()), http.StatusAccepted)
-			return
-		}
-		// Ищем uuid в базе
-		cr, err = c.service.GetRateByUUID(ctx, UUID)
-		// Если не найден uuid
-		if noUUIDErr, ok := err.(*currencyrates.NoUUIDFoundError); ok {
-			http.Error(resp, noUUIDErr.Error(), http.StatusBadRequest)
-			return
-		}
-		// Иные ошибки
-		if err != nil {
-			http.Error(resp, err.Error(), http.StatusInternalServerError)
-			return
-		}
+	cr, err = c.service.GetLastRate(ctx, base, code)
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
 	}
 
 	result, err := json.Marshal(cr)
@@ -167,5 +165,57 @@ func (c *Controller) GetRate(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	resp.Write(result)
+	_, err = resp.Write(result)
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
+
+// GetRateByUUID godoc
+// @Summary      Gets rate by UUID
+// @Description  Gets rate by UUID
+// @Tags         rate
+// @Produce      json
+// @Param	     uuid    query     string  _  "uuid of update"  Format(string)
+// @Success      200  {object} models.CurrencyRate
+// @Failure      400  {object} InvalidUUIDError
+// @Failure      400  {object} currencyrates.NoUUIDFoundError
+// @Failure      500  {object} string
+// @Router       /rates [get]
+func (c *Controller) GetRateByUUID(resp http.ResponseWriter, req *http.Request) {
+	ctx := req.Context()
+
+	UUID, err := ExtractUUID(req)
+	if err != nil {
+		http.Error(resp, InvalidUUIDError{}.Error(), http.StatusBadRequest)
+		return
+	}
+
+	var cr models.CurrencyRate
+
+	// Ищем uuid в базе
+	cr, err = c.service.GetRateByUUID(ctx, UUID)
+	// Если не найден uuid
+	if noUUIDErr, ok := err.(*currencyrates.NoUUIDFoundError); ok {
+		http.Error(resp, noUUIDErr.Error(), http.StatusBadRequest)
+		return
+	}
+	// Иные ошибки
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	result, err := json.Marshal(cr)
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	_, err = resp.Write(result)
+	if err != nil {
+		http.Error(resp, err.Error(), http.StatusInternalServerError)
+		return
+	}
 }
